snake attribute and dna-body

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
     background-color: powderblue;
 }
 
-main {
+#snakes {
     text-align: center;
     background-color: whitesmoke;
     border-radius: 1rem;
