--- a/css/snake.css
+++ b/css/snake.css
@@ -11,8 +11,9 @@
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 snake{
+    min-width: 40px;
     float: left;
-    width: 25%;
+    /*width: 25%;*/
     padding: 10px;
 }
 
@@ -38,7 +39,7 @@ snake{
     border: 4px solid cadetblue;
     border-radius: 1rem;
     background-color: rgba(255, 255, 255, .7);
-    padding: 10px;
+    /*padding: 10px;*/
     margin: 0 0 40px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -68,12 +69,11 @@ snake{
 }
 
 .info fieldset {
-    padding: 10px;
+    padding: 5px;
     text-align: left;
     border: 1px solid #7a7e7e;
     border-radius: 1rem;
     background-color: rgba(255, 255, 255, .7);
-    margin-top: 10px;
 }
 
 .info legend {
@@ -113,6 +113,7 @@ li {
 }
 
 .button {
+    cursor: pointer;
     color: white;
     padding: 7px 20px;
     border-radius: 10rem;
