--- a/css/snake.css
+++ b/css/snake.css
@@ -50,6 +50,8 @@ snake{
     0 6px 20px 0 rgba(0, 0, 0, 0.4);
 }
 
+
+
 .itemlegend {
     background-color: white;
     border: 4px solid cadetblue;
@@ -60,7 +62,20 @@ snake{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+fieldset {
+    min-width: 0;
+    padding: 0;
+}
 
+legend {
+    display: block;
+    width: 95%;
+    max-width: 100%;
+    margin-bottom: .5rem;
+    line-height: inherit;
+    color: inherit;
+    white-space: normal;
+}
 
 .info {
     padding: 0 15px;
@@ -99,8 +114,14 @@ a {
 }
 
 .toProjectContainer {
-    text-align: right;
+    /*text-align: right;*/
+    padding: 5px;
     margin: 10px;
+    width: 95%;
+    display:inline-block;
+
+    white-space: nowrap;
+
 }
 
 
