nice view SNAKE on market and disable inputs/buttons

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,11 @@ p, h1, h2, h3 ,h4, h5, label, legend{
     animation-direction: alternate;
 }
 
+.button:disabled {
+    color: #9a9999;
+    animation: none;
+}
+
 .form-control{
     display: block;
     width: 100%;
